--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".HistoryActivity" />
         <activity android:name=".CustomScanner" />
         <activity
             android:name=".AnyOrientationCaptureActivity"
